Fixed. Error generated by a namespace with an old path

--- a/Bootzor/Components/Dialog/ZorDialog.razor
+++ b/Bootzor/Components/Dialog/ZorDialog.razor
@@ -1,5 +1,4 @@
-﻿
-@if(ShowDialog){
+﻿@if(ShowDialog){
     <div class="__bz_Dialog @(!Overlay ? "__bz_Dialog-override-overlay":"") @_dialogEffect" 
         @ref=@zorDialog tabindex="0" @onkeydown="OnEscapeKeyPressed" >
 
