First attempt adding button minimal logic and style

--- a/Bootzor/wwwroot/css/Bootzor.css
+++ b/Bootzor/wwwroot/css/Bootzor.css
@@ -1,8 +1,13 @@
 ﻿/** Bootzor SCSS Bootzor */
+* {
+  font-family: "Montserrat", sans-serif;
+}
+
 /** Bootzor SCSS Colors */
 * {
   --main-white: #ffffff;
   --bz-color-default-bg: #f4f4f4;
+  --bz-color-default-bg-hover: #e2e2e2;
   --bz-color-default-border: #e6e6e6;
   --bz-color-default-text: #605f5f;
   --bz-color-primary-bg: #89b1cd;
