--- a/Bootzor/wwwroot/scss/Colors.scss
+++ b/Bootzor/wwwroot/scss/Colors.scss
@@ -2,6 +2,7 @@
 * {
     --main-white: #ffffff;
     --bz-color-default-bg: #f4f4f4;
+    --bz-color-default-bg-hover: #e2e2e2;
     --bz-color-default-border: #e6e6e6;
     --bz-color-default-text: #605f5f;
     --bz-color-primary-bg: #89b1cd;
