Add parameter to simplify the instnace

--- a/Bootzor/Components/Button/ZorButton.razor
+++ b/Bootzor/Components/Button/ZorButton.razor
@@ -1,3 +1,8 @@
 ﻿<button type="button" @onclick=ClickButton class="__bz_button">
-    @Content
+    @TextButton
+    
+    @if(@Content != null)
+    {
+        @Content
+    }
 </button>
